syntax = "proto3";

package org.example.auth;

service AuthService {
    rpc Authenticate (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string userId = 1;
    string email = 2;
    string role = 3;
}